# python-cs-events

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-package.yml
cs_events/: __init__.py  _events.py
cs_events_tests/: test_events.py
src/cs_events/: __init__.py  _collections.py  _event.py  _event_handler_collections.py  _events.py
src/events/: __init__.py  _collections.py  _common.py  _decorator.py  _event.py  _events.py  _field.py  _property.py  _utils.py  concurrent.py
tests/: test__init__.py  test_collections.py  test_cs_events.py  test_event.py  test_events.py
