[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cs-events"
version = "0.2.2"
description = "C#-style event handling mechanism for Python"
authors = ["Daniel Jeong <wise0704@outlook.com>"]
keywords = ["python", "event", "c#"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wise0704/python-cs-events"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = { version = "^4.5.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
autopep8 = "^2.0.1"
flake8 = "^6.0.0"

[tool.poetry.urls]
"Issues" = "https://github.com/wise0704/python-cs-events/issues"

[tool.pytest.ini_options]
addopts = "-v --no-header"
console_output_style = "count"
python_files = "test_*.py"
python_functions = "test_"
testpaths = "tests"
